enh: feat(coupon): add DB-driven coupon issuance service with stock validation

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'coupon-promotion'
 
 include('discovery-service',
         'user-service',
-        'api-gateway')
+        'api-gateway',
+        'coupon-service')
