--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -61,3 +61,10 @@ resilience4j:
           - org.springframework.cloud.gateway.support.NotFoundException
           - io.github.resilience4j.circuitbreaker.CallNotPermittedException
 
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
