--- a/coupon-service/src/main/resources/application.yaml
+++ b/coupon-service/src/main/resources/application.yaml
@@ -23,10 +23,10 @@ spring:
       enabled: true
       path: /h2-console
 
-  data:
-    redis:
-      host: localhost
-      port: 6379
+#  data:
+#    redis:
+#      host: localhost
+#      port: 6379
 
 eureka:
   client:
