--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       # 리스너 설정
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT'
       KAFKA_LISTENERS: 'PLAINTEXT://:9092,CONTROLLER://:9093'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka:9092'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://localhost:9092'
 
       # KRaft 모드 설정
       KAFKA_PROCESS_ROLES: 'broker,controller'  # 브로커와  컨트롤러 역할 통합
