--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -15,15 +15,18 @@ services:
     container_name: kafka
     ports:
       - "9092:9092"
+      - "9091:9091"
     environment:
       # KRaft 필수 설정
       KAFKA_NODE_ID: 1  # 브로커 노드 ID
       CLUSTER_ID: 'EpwKlK0lR6qKZW0cGwZz8w'  # 클러스터 고유 식별자
 
       # 리스너 설정
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT'
-      KAFKA_LISTENERS: 'PLAINTEXT://:9092,CONTROLLER://:9093'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://localhost:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_LISTENERS: 'INTERNAL://:9092,EXTERNAL://:9091,CONTROLLER://:9093'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka:9092,EXTERNAL://localhost:9091'
+
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'INTERNAL'
 
       # KRaft 모드 설정
       KAFKA_PROCESS_ROLES: 'broker,controller'  # 브로커와  컨트롤러 역할 통합
