--- a/coupon-service/build.gradle
+++ b/coupon-service/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'org.redisson:redisson-spring-boot-starter:3.23.5'
     implementation 'org.springframework.kafka:spring-kafka'
 
+    implementation("com.zaxxer:HikariCP:5.0.1")
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
