--- a/coupon-service/build.gradle
+++ b/coupon-service/build.gradle
@@ -49,8 +49,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-//    implementation 'io.micrometer:micrometer-registry-prometheus'
-//    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 dependencyManagement {
