chore(point): add base application.yaml for point service

--- a/coupon-service/src/main/resources/application.yaml
+++ b/coupon-service/src/main/resources/application.yaml
@@ -35,10 +35,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 
 #  data:
 #    redis:
