--- a/point-service/src/main/resources/application.yaml
+++ b/point-service/src/main/resources/application.yaml
@@ -1,2 +1,50 @@
+server:
+  port: 8083
+
 spring:
   application.name: point-service
+
+  datasource:
+    hikari:
+      jdbc-url: jdbc:mysql://localhost:3306/point
+      username: point-user
+      password: user1234!
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      pool-name: HikariCP
+      maximum-pool-size: 10
+      minimum-idle: 5
+      idle-timeout: 30000
+      connection-timeout: 20000
+      max-lifetime: 1800000
+      connection-test-query: SELECT 1
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
+
+management:
+  server:
+    port: 8083
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics,prometheus
+  metrics:
+    tags:
+      application: ${spring.application.name}
+    distribution:
+      percentiles-histogram:
+        http.server.request: true
+      slo:
+        http.server.request: 50ms,100ms,200ms
