chore(point): 오탈자 수정

--- a/point-service/src/main/resources/application.yaml
+++ b/point-service/src/main/resources/application.yaml
@@ -47,4 +47,4 @@ management:
       percentiles-histogram:
         http.server.request: true
       slo:
-        http.server.request: 50ms,100ms,200ms
+        http.server.requests: 50ms,100ms,200ms
