--- a/point-service-batch/build.gradle
+++ b/point-service-batch/build.gradle
@@ -29,12 +29,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     implementation 'org.redisson:redisson-spring-boot-starter:3.23.5'
-    implementation 'com.zaxxer:HikariCP:5.0.1'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    //테스트용
+    implementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
