--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -114,6 +114,23 @@ services:
     networks:
       - promotion_network
 
+  jenkins:
+    build:
+      context: ./docker/jenkins
+      dockerfile: Dockerfile-jenkins
+    container_name: jenkins
+    privileged: true
+    user: root
+    ports:
+      - "8888:8080"  # 호스트의 8888 포트를 컨테이너의 8080 포트에 매핑
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - TZ=Asia/Seoul
+    networks:
+      - promotion_network
 
 networks:
   promotion_network:
@@ -123,3 +140,4 @@ volumes:
   mysql_data:
   prometheus_data:
   grafana_data:
+  jenkins_home:
