--- a/point-service-batch/src/main/resources/application-dev.yaml
+++ b/point-service-batch/src/main/resources/application-dev.yaml
@@ -2,7 +2,7 @@ spring:
   application.name: point-service-batch
 
   datasource:
-    url: jdbc:mysql://coupon-mysql:3306/point
+    url: jdbc:mysql://mysql:3306/point
     username: point-user
     password: point1234!
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -31,7 +31,7 @@ spring:
 
   data:
     redis:
-      host: redis-practice
+      host: redis
       port: 6379
 
   batch:
