--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -127,7 +127,7 @@ services:
       - "8888:8080"  # 호스트의 8888 포트를 컨테이너의 8080 포트에 매핑
       - "50000:50000"
     volumes:
-      - jenkins_home:/var/jenkins_home
+      - ./jenkins:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - TZ=Asia/Seoul
@@ -142,4 +142,3 @@ volumes:
   mysql_data:
   prometheus_data:
   grafana_data:
-  jenkins_home:
