--- a/point-service-batch/src/main/resources/application-dev.yaml
+++ b/point-service-batch/src/main/resources/application-dev.yaml
@@ -7,14 +7,14 @@ spring:
     password: point1234!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-    hikari:
-      pool-name: HikariCP
-      maximum-pool-size: 10
-      minimum-idle: 5
-      idle-timeout: 30000
-      connection-timeout: 20000
-      max-lifetime: 1800000
-      connection-test-query: SELECT 1
+#    hikari:
+#      pool-name: HikariCP
+#      maximum-pool-size: 10
+#      minimum-idle: 5
+#      idle-timeout: 30000
+#      connection-timeout: 20000
+#      max-lifetime: 1800000
+#      connection-test-query: SELECT 1
 
   sql:
     init:
