--- a/infrastructure/prometheus/prometheus.yml
+++ b/infrastructure/prometheus/prometheus.yml
@@ -15,6 +15,11 @@ scrape_configs:
     static_configs:
       - targets: ['host.docker.internal:8080']
 
+  - job_name: 'point-service'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'host.docker.internal:8083' ]
+
 alerting:
   alertmanagers:
     - static_configs:
