--- a/point-service/src/main/resources/application.yaml
+++ b/point-service/src/main/resources/application.yaml
@@ -2,15 +2,15 @@ server:
   port: 8083
 
 spring:
-  application.name: point-service
+  application:
+    name: point-service
 
   datasource:
-    url: jdbc:mysql://localhost:3306/point
-    username: point-user
-    password: point1234!
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
     hikari:
+      jdbc-url: jdbc:mysql://localhost:3306/point
+      username: point-user
+      password: point1234!
+      driver-class-name: com.mysql.cj.jdbc.Driver
       pool-name: HikariCP
       maximum-pool-size: 10
       minimum-idle: 5
