--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,6 @@ include('discovery-service',
         'api-gateway',
         'coupon-service',
         'point-service',
-        'point-service-batch'
+        'point-service-batch',
+        'time-sale-service'
 )
