--- a/time-sale-service/build.gradle
+++ b/time-sale-service/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.bmcho'
 version = '0.0.1-SNAPSHOT'
-description = 'point-service'
+description = 'time-sale-service'
 
 java {
     toolchain {
@@ -29,23 +29,19 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.redisson:redisson-spring-boot-starter:3.23.5'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.23.5'
     implementation 'com.zaxxer:HikariCP:5.0.1'
+
+    compileOnly 'org.projectlombok:lombok'
+
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
-
-    implementation 'io.micrometer:micrometer-registry-prometheus'
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
 }
 
 dependencyManagement {
