--- a/time-sale-service/src/main/resources/application.yaml
+++ b/time-sale-service/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
 
   datasource:
     hikari:
-      jdbc-url: jdbc:mysql://localhost:3306/time-sale
+      jdbc-url: jdbc:mysql://localhost:3306/timesale
       username: time-user
       password: time1234!
       driver-class-name: com.mysql.cj.jdbc.Driver
