--- a/time-sale-service/build.gradle
+++ b/time-sale-service/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
 
+    implementation 'org.springframework.kafka:spring-kafka'
+
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
